force-app/main/default/objects/Opportunity/fields/S3_Archival_URL__c.field-meta.xml
<CustomField>
    <fullName>S3_Archival_URL__c</fullName>
    <label>S3 Archival URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>