force-app/main/default/objects/Opportunity/fields/s3bucket__c.field-meta.xml
<CustomField>
    <fullName>s3bucket__c</fullName>
    <label>s3bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>