force-app/main/default/objects/Opportunity/fields/s3filename__c.field-meta.xml
<CustomField>
    <fullName>s3filename__c</fullName>
    <label>s3filename__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>