force-app/main/default/objects/Opportunity/fields/s3key__c.field-meta.xml
<CustomField>
    <fullName>s3key__c</fullName>
    <label>s3key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>